2011-07-08  Valek Filippov

		* Move 'Add record' from mfview
		* Change record size +-4 bytes

2011-07-07  Valek Filippov

		* Change SVM command names to CamelCase
		* Fix saving of WMF and EMFs, adding saving of SVMs

2011-07-06  Valek Filippov

		* More block parsing for vsdchunks
		* Support for different block start offset in v6 and v11.
		* Unified SVM entries, parsing of some records.

2011-07-04  Valek Filippov

		* Minimal support for Starview Metafiles (based on Inge Wallin/Pierre Ducroquet spec)

2011-07-04  Valek Filippov

		* Minimal support for regular and AP WMFs. Prevent saving for non-WMF files.
		* Parsing of 'Geometry' flags.
		* Parse 'Background Page' from 'Page' chunk.
		* Improved 'Char', added 'Para' and 'TextBlock' parsing.

2011-07-03  Valek Filippov

		* Antieffective compression function for VSD, test.py to play with it.
		* Initial support for EMF moved from mfview. Some clean-up.

2011-07-01  Valek Filippov

		* Added parsing of children lists in *List chunks

2011-06-24  Valek Filippov

		* Initial parsing of blocks for some chunks
		* Parsing of 'NURBS Data' for NURBS and Polyline functions

2011-06-23  Valek Filippov

		* Initial parsing of some streams of 0x4x type
		* Combine and give to oleparse VBA Project stream
		* Label 0x0a,0x0d,0x1f and 0xd1 streamtypes.
		* Add ChangeLog